examples: add example to change mission speed
This is an example that show how the mission speed can be changed
manually during a mission.

This is currently just using the MavlinkPassthrough plugin but could in
the future be part of the Action plugin.

Signed-off-by: Julian Oes <julian@oes.ch>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(gimbal_device_tester)
 add_subdirectory(logfile_download)
 add_subdirectory(manual_control)
 add_subdirectory(mavshell)
+add_subdirectory(mission_speed)
 add_subdirectory(multiple_drones)
 add_subdirectory(offboard)
 add_subdirectory(parachute)
